# terminus_fcs

./: .gitignore  CMakeLists.txt  README.md  README_Property_System.md  conanfile.py
.windsurf/rules/: cpp-rules-1.md
docs/: design.md
examples/: CMakeLists.txt  README.md  config.toml  demo_app_01.cpp  example_usage.cpp
templates/: exports.hpp.in
test/: CMakeLists.txt
test/package/: CMakeLists.txt  conanfile.py  example.cpp
test/unit/: CMakeLists.txt  TEST_config_file_parser.cpp  TEST_datastore.cpp  TEST_property.cpp  TEST_schema.cpp  main.cpp
